--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,15 @@
 <header class="flex justify-between items-center py-5 w-[1120px] mx-auto">
     <img
-        class="rounded-full w-12 h-12"
+        class="rounded-full size-12"
         src="https://i.imgur.com/1xbmdV6.png"
         alt="logo KPOETA"
     />
 
     <nav class="flex flex-row gap-x-10" role="navigation" opacity-80>
-        <a href="">Inicio</a>
-        <a href="">Acerca de mi</a>
-        <a href="">Proyectos</a>
-        <a href="">Contacto</a>
+        <a href="#top">Inicio</a>
+        <a href="#experience">Experiencia</a>
+        <a href="#Acerca-de-mi">Acerca de mi</a>
+        <a href="#Proyectos">Proyectos</a>
+        <a href="#Contacto">Contacto</a>
     </nav>
 </header>
