--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -2,7 +2,9 @@
     class="
     rounded-full border border-white/10
     flex justify-center items-center 
-    gap-x-2 py-1 px-4
+    gap-x-2 md:py-2 md:px-4
+    py-1 px-2
+    text-xs md:text-base
     bg-white/10
     hover:bg-white/20 hover:scale-110 
     transition-colors duration-200 ease-in-out"
