--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Projects from "../components/Projects.astro";
 	<main class="px-4">
 		<SectionContainer class="py-44 pb-22">
 			<h1
-				class="text-white text-3xl md:text-4xl lg:text-5xl 
+				class="text-white text-3xl md:text-4xl lg:text-5xl
 				font-bold flex flex-row gap-x-4 pb-3 lg:pb-4"
 			>
 				Hola, soy Geider Montaño <a
@@ -33,10 +33,26 @@ import Projects from "../components/Projects.astro";
 				</a>
 				<h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
 					<span
-						>Estoy aprendiendo a programar y a crear sitios web.
+						>INTRO #1 ¡Hola! Soy un apasionado programador y
+						desarrollador colombiano en constante proceso de
+						aprendizaje, siempre en busca del siguiente desafío que
+						me impulse a mejorar y adquirir nuevas habilidades. Mi
+						dedicación al mundo de la programación no solo es una
+						profesión, sino una búsqueda constante de crecimiento en
+						todos los aspectos. Actualmente, estoy explorando
+						oportunidades emocionantes que me permitan expandir mis
+						capacidades y contribuir a proyectos innovadores.
+						Bienvenido a mi portafolio, donde cada línea de código
+						cuenta una historia de aprendizaje y dedicación.
 					</span>
 					<span class="opacity-80"
-						>Me gusta mucho el diseño y la programación.
+						>INTRO #2 Actualmente, soy un programador y
+						desarrollador colombiano inmerso en un proceso de
+						aprendizaje continuo, en busca del camino que más me
+						apasione y contribuya a mi mejora integral. Estoy
+						explorando nuevos retos que impulsen el desarrollo de
+						mis habilidades y la adquisición de conocimientos
+						adicionales.
 					</span>
 				</h2>
 
@@ -47,7 +63,7 @@ import Projects from "../components/Projects.astro";
 						<LinkedIn class="size-5 md-size-7" />
 						 LinkedIn
 					</SocialPill>
-					
+
 					<SocialPill href="https://github.com/KPOETA1">
 						<GitHub class="size-5 md-size-7" />
 						 GitHub
@@ -57,29 +73,25 @@ import Projects from "../components/Projects.astro";
 						<Mail class="size-5 md-size-7" />
 						 Geideran808087@gmail.com
 					</SocialPill>
-
-
 				</nav>
 			</h1>
 		</SectionContainer>
 
 		<SectionContainer id="experience">
-			<h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center"> 
+			<h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
 				<Maletin class="size-7" />
-				Experiencia Laboral
+				 Experiencia Laboral
 			</h2>
 			<Perspective class="size-6" />
-			<Experience/>
+			<Experience />
 		</SectionContainer>
 
 		<SectionContainer id="Proyectos">
-			<h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center"> 
+			<h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
 				<Code class="size-7" />
-				Proyectos
+				 Proyectos
 			</h2>
-			<Projects/>
-
+			<Projects />
 		</SectionContainer>
-
 	</main>
 </Layout>
