--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,9 +31,9 @@ import Projects from "../components/Projects.astro";
 						<Badge>Listo para Chambear</Badge>
 					</div>
 				</a>
-				<h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
+				<h2 class="text-xl lg:text-2xl text-balance max-w-[700px]">
 					<span
-						>INTRO #1 ¡Hola! Soy un apasionado programador y
+						>¡Hola! Soy un apasionado programador y
 						desarrollador colombiano en constante proceso de
 						aprendizaje, siempre en busca del siguiente desafío que
 						me impulse a mejorar y adquirir nuevas habilidades. Mi
@@ -46,14 +46,7 @@ import Projects from "../components/Projects.astro";
 						cuenta una historia de aprendizaje y dedicación.
 					</span>
 					<span class="opacity-80"
-						>INTRO #2 Actualmente, soy un programador y
-						desarrollador colombiano inmerso en un proceso de
-						aprendizaje continuo, en busca del camino que más me
-						apasione y contribuya a mi mejora integral. Estoy
-						explorando nuevos retos que impulsen el desarrollo de
-						mis habilidades y la adquisición de conocimientos
-						adicionales.
-					</span>
+						>
 				</h2>
 
 				<nav class="flex gap-5 mt-8 flex-wrap">
