--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,14 @@
-<header class="flex justify-between items-center py-5 w-[1120px] mx-auto">
+<header
+    class={`
+    flex justify-between
+    items-center
+    mx-auto
+    py-5
+    sticky top-0
+    w-full xl:w-[1120px]
+    z-10
+  `}
+>
     <img
         class="rounded-full size-12"
         src="https://i.imgur.com/1xbmdV6.png"
@@ -6,10 +16,122 @@
     />
 
     <nav class="flex flex-row gap-x-10" role="navigation" opacity-80>
-        <a href="#top">Inicio</a>
-        <a href="#experience">Experiencia</a>
-        <a href="#Acerca-de-mi">Acerca de mi</a>
-        <a href="#Proyectos">Proyectos</a>
-        <a href="#Contacto">Contacto</a>
+        <div
+            class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto"
+        >
+            <button
+                data-collapse-toggle="navbar-default"
+                type="button"
+                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                aria-controls="navbar-default"
+                aria-expanded="false"
+            >
+                <span class="sr-only">Open main menu</span>
+                <svg
+                    class="w-5 h-5"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 17 14"
+                >
+                    <path
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="3"
+                        d="M1 1h15M1 7h15M1 13h15"></path>
+                </svg>
+            </button>
+            <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+                <ul
+                    class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+                >
+                    <li>
+                        <a
+                            href="#top"
+                            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+                            aria-current="page">Inicio</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="#experience"
+                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                            >Experiencia</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="#Acerca-de-mi"
+                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                            >Acerca de mi</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="#Proyectos"
+                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                            >Proyectos</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="#Contacto"
+                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                            >Contacto</a
+                        >
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
+
+<script>
+document.addEventListener('DOMContentLoaded', (event) => {
+    const toggleButton = document.querySelector('[data-collapse-toggle="navbar-default"]');
+    const navbar = document.getElementById('navbar-default');
+
+    // Verificar si toggleButton y navbar no son nulos
+    if (toggleButton && navbar) {
+        // Función para mostrar/ocultar el menú
+        const toggleMenu = () => {
+            if (navbar.classList.contains('hidden')) {
+                navbar.classList.remove('hidden');
+            } else {
+                navbar.classList.add('hidden');
+            }
+        };
+
+        // Evento de clic en el botón de toggle
+        toggleButton.addEventListener('click', () => {
+            toggleMenu();
+        });
+
+        // Evento de clic en cualquier parte de la página
+        document.addEventListener('click', (event) => {
+            // Verificar si event.target no es nulo
+            if (event.target) {
+                const isClickInsideNavbar = navbar.contains(event.target as Node);
+                const isClickInsideToggleButton = toggleButton.contains(event.target as Node);
+
+                if (!isClickInsideNavbar && !isClickInsideToggleButton) {
+                    navbar.classList.add('hidden');
+                }
+            }
+        });
+
+        // Evento de clic en enlaces del menú para ocultar el menú
+        const menuLinks = navbar.querySelectorAll('a');
+        menuLinks.forEach((link) => {
+            link.addEventListener('click', () => {
+                navbar.classList.add('hidden');
+            });
+        });
+    } else {
+        console.error('No se encontró el botón de toggle o el menú.');
+    }
+});
+</script>
+
+    
