--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -22,7 +22,7 @@ const PROJECTS = [
             "Created from scratch with Next.js and Tailwind CSS. It's a library with SVG logos from the most popular brands. Optimized for SEO and performance.",
         link: "https://svgl.vercel.app/",
         github: "https://github.com/pheralb/svgl",
-        image: "../../public/projects/1.jpg",
+        image: "/projects/1.jpg",
         tags: [TAGS.NEXT, TAGS.TAILWIND],
     },
 ];
