--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content={Astro.props.title} />
@@ -21,19 +21,14 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 
-	<body>
-		<div class="relative h-full w-full bg-slate-950">
-			<div
-				class="absolute bottom-0 left-[-20%] right-0 top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(255,0,182,.15),rgba(255,255,255,0))]"
-			>
-			</div><div
-				class="absolute bottom-0 right-[-20%] top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(255,0,182,.15),rgba(255,255,255,0))]"
-			>
-			</div>
+	<body class="relative">
+		<div
+			class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+		>
 		</div>
 		<Header />
 		<slot />
-		<Footer/>
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -46,10 +41,9 @@ const { title } = Astro.props;
 	}
 
 	body {
-		/* background: #000; */
+		background: #050505;
 		display: flex;
 		flex-direction: column;
-		background: #050505;
 		min-height: 100vh;
 	}
 
