--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -34,7 +34,7 @@ const { title, description, link, date } = Astro.props
     transition
     hover:scale-110 hover:bg-white/10"
     >
-      Saber más...{" "}
+      <span class="text-white" > Saber más... </span>{" "}
       <svg
         class="w-3 h-3 ms-2 rtl:rotate-180"
         aria-hidden="true"
