--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -32,7 +32,7 @@ const PROJECTS = [
     PROJECTS.map(({ image, title, description, tags, github }) => (
         <article>
             <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
-            <p class="text-lg mb-4 text-pretty">{description}</p>
+            <p class="text-lg text-white mb-4 text-pretty">{description}</p>
             <ul class="flex gap-x-2 flex-row mb-2">
                 {tags.map((tag) => (
                     <li>
@@ -45,8 +45,8 @@ const PROJECTS = [
                     </li>
                 ))}
                 <li>
-                    <span class="flex gap-x-2 rounded-full text-xs bg-[#333] py-1 px-2">
-                        <GitHub class="size-4" />
+                    <span class="flex  gap-x-2 rounded-full text-xs bg-[#333] py-1 px-2">
+                        <GitHub class="size-4 " />
                         <a
                             href={github}
                             target="_blank"
