--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,8 @@ import Projects from "../components/Projects.astro";
 ---
 
 <Layout title="Portafolio de Geider - Desarrollador y Programador Full Stack">
-	<main class="px-4">
-		<SectionContainer class="py-44 pb-22">
+	<main class="px-1">
+		<SectionContainer id="Yo" class="mt-12">
 			<h1
 				class="text-white text-3xl md:text-4xl lg:text-5xl
 				font-bold flex flex-row gap-x-4 pb-3 lg:pb-4"
@@ -31,9 +31,9 @@ import Projects from "../components/Projects.astro";
 						<Badge>Listo para Chambear</Badge>
 					</div>
 				</a>
-				<h2 class="text-xl lg:text-2xl text-balance max-w-[700px]">
+				<h2 class="text-xl text-white lg:text-2xl text-balance max-w-[700px]">
 					<span
-						>¡Hola! Soy un apasionado programador y
+						>Un apasionado programador y
 						desarrollador colombiano en constante proceso de
 						aprendizaje, siempre en busca del siguiente desafío que
 						me impulse a mejorar y adquirir nuevas habilidades. Mi
@@ -49,7 +49,7 @@ import Projects from "../components/Projects.astro";
 						>
 				</h2>
 
-				<nav class="flex gap-5 mt-8 flex-wrap">
+				<nav class="flex text-white gap-5 mt-8 flex-wrap flex-col sm:flex-row">
 					<SocialPill
 						href="https://www.linkedin.com/in/geider-andr%C3%A9s-monta%C3%B1o-zalazar-430393247/"
 					>
@@ -71,7 +71,7 @@ import Projects from "../components/Projects.astro";
 		</SectionContainer>
 
 		<SectionContainer id="experience">
-			<h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
+			<h2 class="text-2xl text-white font-semibold mb-5 flex gap-x-3 items-center">
 				<Maletin class="size-7" />
 				 Experiencia Laboral
 			</h2>
@@ -80,7 +80,7 @@ import Projects from "../components/Projects.astro";
 		</SectionContainer>
 
 		<SectionContainer id="Proyectos">
-			<h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
+			<h2 class="text-2xl text-white font-semibold mb-5 flex gap-x-3 items-center">
 				<Code class="size-7" />
 				 Proyectos
 			</h2>
