--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -24,95 +24,176 @@ const PROJECTS = [
         github: "https://github.com/pheralb/svgl",
         image0: "/roma/roma.jpg",
         image1: "/roma/roma1.jpg",
-        image2: "/roma/roma2.jpg", // funciona
-        imageproyecto: "/projects/1.jpg", // funciona
-
-
+        image2: "/roma/roma2.jpg",
         tags: [TAGS.NEXT, TAGS.TAILWIND],
     },
 ];
 ---
 
 {
-    PROJECTS.map(({ image0,image1,image2, imageproyecto, title, description, tags, github }) => (
-        <article>
-            <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
-            <p class="text-lg text-white mb-4 text-pretty">{description}</p>
-            <ul class="flex gap-x-2 flex-row mb-2">
-                {tags.map((tag) => (
-                    <li>
-                        <span
-                            class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}
+    PROJECTS.map(
+        ({
+            image0,
+            image1,
+            image2,
+            title,
+            description,
+            tags,
+            github,
+        }) => (
+            <>
+                <article>
+                    <h3 class="text-2xl font-semibold text-yellow-200 mb-2">
+                        {title}
+                    </h3>
+                    <p class="text-lg text-white mb-4 text-pretty">
+                        {description}
+                    </p>
+                    <ul class="flex gap-x-2 flex-row mb-2">
+                        {tags.map((tag) => (
+                            <li>
+                                <span
+                                    class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}
+                                >
+                                    <tag.icon class="size-4" />
+                                    {tag.name}
+                                </span>
+                            </li>
+                        ))}
+                        <li>
+                            <span class="flex  gap-x-2 rounded-full text-xs bg-[#333] py-1 px-2">
+                                <GitHub class="size-4 " />
+                                <a
+                                    href={github}
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                >
+                                    Github
+                                </a>
+                            </span>
+                        </li>
+                    </ul>
+
+                    <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
+                </article>
+                <div class="max-w-2xl mx-auto">
+                    <div
+                        id="default-carousel"
+                        class="relative"
+                        data-carousel="static"
+                    >
+                        <div class="overflow-hidden relative h-56 rounded-lg sm:h-64 xl:h-80 2xl:h-96">
+                            <div
+                                class="hidden duration-700 ease-in-out"
+                                data-carousel-item
+                            >
+                                <span class="absolute top-1/2 left-1/2 text-2xl font-semibold text-white -translate-x-1/2 -translate-y-1/2 sm:text-3xl ">
+                                    Primer Slide
+                                </span>
+                                <img
+                                    src={image0}
+                                    class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                                    alt="..."
+                                />
+                            </div>
+
+                            <div
+                                class="hidden duration-700 ease-in-out"
+                                data-carousel-item
+                            >
+                                <img
+                                    src={image1}
+                                    class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                                    alt="..."
+                                />
+                            </div>
+
+                            <div
+                                class="hidden duration-700 ease-in-out"
+                                data-carousel-item
+                            >
+                                <img
+                                    src={image2}
+                                    class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                                    alt="..."
+                                />
+                            </div>
+                        </div>
+
+                        <div class="flex absolute bottom-5 left-1/2 z-30 space-x-3 -translate-x-1/2">
+                            <button
+                                type="button"
+                                class="w-3 h-3 rounded-full"
+                                aria-current="false"
+                                aria-label="Slide 1"
+                                data-carousel-slide-to="0"
+                            />
+                            <button
+                                type="button"
+                                class="w-3 h-3 rounded-full"
+                                aria-current="false"
+                                aria-label="Slide 2"
+                                data-carousel-slide-to="1"
+                            />
+                            <button
+                                type="button"
+                                class="w-3 h-3 rounded-full"
+                                aria-current="false"
+                                aria-label="Slide 3"
+                                data-carousel-slide-to="2"
+                            />
+                        </div>
+
+                        <button
+                            type="button"
+                            class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
+                            data-carousel-prev
                         >
-                            <tag.icon class="size-4" />
-                            {tag.name}
-                        </span>
-                    </li>
-                ))}
-                <li>
-                    <span class="flex  gap-x-2 rounded-full text-xs bg-[#333] py-1 px-2">
-                        <GitHub class="size-4 " />
-                        <a
-                            href={github}
-                            target="_blank"
-                            rel="noopener noreferrer"
+                            <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30  group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
+                                <svg
+                                    class="w-5 h-5 text-white sm:w-6 sm:h-6"
+                                    fill="none"
+                                    stroke="currentColor"
+                                    viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M15 19l-7-7 7-7"
+                                    />
+                                </svg>
+                                <span class="hidden">Anterior</span>
+                            </span>
+                        </button>
+                        <button
+                            type="button"
+                            class="flex absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
+                            data-carousel-next
                         >
-                            Github
-                        </a>
-                    </span>
-                </li>
-            </ul>
-<div class="">
-
-	<div id="default-carousel" class="relative" data-carousel="static" data-carousel-item="slide">
-        <!-- Carousel wrapper -->
-        <div class="rounded aspect-video w-full h-80 sm:h-96 md:h-120 lg:h-144 xl:h-160 2xl:h-176" >
-
-
-            <!-- Item 2 -->
-            <div class="hidden duration-300 ease-in-out" data-carousel-item="2"  >
-                <img src={image2}  class="rounded shadow-xl shadow-white/5 aspect-video" alt="hola2"/>
-            </div>
-
-            <!-- Item 3 -->
-            <div class="hidden duration-400 ease-in-out" data-carousel-item="1"  >
-                <img src={image1} data-carousel-item  class="rounded shadow-xl shadow-white/5 aspect-video" alt="hola3"/>
-            </div>
-
-            <!-- Item 1 -->
-            <div class="hidden duration-200 ease-in-out" data-carousel-item="0">
-                <img src={image0} class="rounded shadow-xl shadow-white/5 aspect-video" alt="hola"/>
-            </div>
-
-
-
-        </div>
-        <!-- Slider indicators -->
-        <div class="flex absolute bottom-5 left-1/2 z-30 space-x-3 -translate-x-1/2">
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 1" data-carousel-slide-to="0"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
-        </div>
-        <!-- Slider controls -->
-        <button type="button" class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none" data-carousel-prev>
-            <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-                <svg class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
-                <span class="hidden">Previous</span>
-            </span>
-        </button>
-        <button type="button" class="flex absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none" data-carousel-next>
-            <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-                <svg class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
-                <span class="hidden">Next</span>
-            </span>
-        </button>
-    </div>
-
-
-    <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js">
-        
-        </script>
-</div>
-        </article>
-    ))
+                            <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 0 group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
+                                <svg
+                                    class="w-5 h-5 text-white sm:w-6 sm:h-6"
+                                    fill="none"
+                                    stroke="currentColor"
+                                    viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M9 5l7 7-7 7"
+                                    />
+                                </svg>
+                                <span class="hidden">Siguiente</span>
+                            </span>
+                        </button>
+                    </div>
+                    <script src="https://cdn.tailwindcss.com/3.4.0" />
+                </div>
+            </>
+        ),
+    )
 }
