--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -76,23 +76,23 @@ const PROJECTS = [
 
                     <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
                 </article>
-                <div class="max-w-2xl mx-auto">
+                <div class="">
                     <div
                         id="default-carousel"
-                        class="relative"
+                        class="relative  "
                         data-carousel="static"
                     >
-                        <div class="overflow-hidden relative h-56 rounded-lg sm:h-64 xl:h-80 2xl:h-96">
+                        <div class="overflow-hidden relative rounded shadow-2xl shadow-white/10 aspect-video">
                             <div
                                 class="hidden duration-700 ease-in-out"
                                 data-carousel-item
                             >
-                                <span class="absolute top-1/2 left-1/2 text-2xl font-semibold text-white -translate-x-1/2 -translate-y-1/2 sm:text-3xl ">
-                                    Primer Slide
+                                <span class="">
+
                                 </span>
                                 <img
                                     src={image0}
-                                    class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                                    class="rounded shadow-2xl shadow-white/10 aspect-video"
                                     alt="..."
                                 />
                             </div>
@@ -103,7 +103,7 @@ const PROJECTS = [
                             >
                                 <img
                                     src={image1}
-                                    class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                                    class="rounded shadow-2xl shadow-white/10 aspect-video"
                                     alt="..."
                                 />
                             </div>
@@ -114,7 +114,7 @@ const PROJECTS = [
                             >
                                 <img
                                     src={image2}
-                                    class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                                    class="rounded shadow-2xl shadow-white/10 aspect-video"
                                     alt="..."
                                 />
                             </div>
