--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,11 +61,11 @@ import Projects from "../components/Projects.astro";
 						<GitHub class="size-5 md-size-7" />
 						 GitHub
 					</SocialPill>
-
-					<SocialPill href="https://github.com/KPOETA1">
+					
+					<SocialPill href="mailto:Geideran808087@gmail.com">
 						<Mail class="size-5 md-size-7" />
 						 Geideran808087@gmail.com
-					</SocialPill>
+					  </SocialPill>
 				</nav>
 			</h1>
 		</SectionContainer>
