--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,5 +1,5 @@
 <span
-    class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px2.5 py-0.5 rounded-full inline-block
+    class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-1.5 py-1 rounded-full inline-block mt-2.5
     dark:bg-blue-900 dark:text-blue-300"
 >
     <slot />
